--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 }
 
 html{
+  font-family: Arial, Helvetica, sans-serif;
   background-color: #192428;
 }
 
@@ -19,7 +20,6 @@ html{
   position: fixed;
   background-color: #0784b5;
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
   font-size: 5em;
   top: 0%;
   height: 2em;
@@ -85,6 +85,7 @@ li a{
   color: #535195;
   margin-left: 2em;
   padding-bottom: 0em;
+  text-decoration:none;
 }
 
 .HeaderTwo{
